<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="300dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dlg_register_texts_tv_text"
                style="@style/textviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_register_texts_tv_text"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/dlg_register_texts_et_text"
                style="@style/textviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:lines="5"
                android:minWidth="200dp" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/dlg_register_texts_tv_url"
                style="@style/textviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_register_texts_tv_url"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/dlg_register_texts_et_url"
                style="@style/textviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minWidth="200dp" />

            <TextView
                android:id="@+id/dlg_register_texts_tv_genre"
                style="@style/textviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_register_texts_tv_genre"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/dlg_register_texts_et_genre"
                style="@style/textviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minWidth="200dp" />

            <TextView
                android:id="@+id/dlg_register_texts_tv_memo"
                style="@style/textviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dlg_register_texts_tv_memo"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/dlg_register_texts_et_memo"
                style="@style/textviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minWidth="200dp" />
        </LinearLayout>

    </ScrollView>

        <LinearLayout
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:layout_marginTop="10dp"
            
            >

            <Button
                android:id="@+id/dlg_register_texts_bt_ok"
                
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="3dp"
                
                android:layout_weight="1"
                android:text="@string/generic_tv_register"
                android:textColor="@color/blue1"
                android:textSize="25dp" />

            <Button
                android:id="@+id/dlg_register_texts_bt_cancel"
                
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                
                android:layout_weight="1"
                
                android:text="@string/generic_bt_cancel"
                android:textColor="@color/red"
                android:textSize="25dp" 
                
                />
        </LinearLayout>

</LinearLayout>