<?xml version="1.0" encoding="utf-8"?>
  <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      
      android:orientation="vertical" 
      
      >

      <ListView
          android:id="@android:id/list"
          android:layout_width="match_parent"
          android:layout_height="400dp"
          
          android:layout_weight="1"

          android:layout_marginTop="10dp"
          android:layout_marginBottom="0dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          
          android:minHeight="400dp"
          
          >
      </ListView>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          
          android:gravity="center"
          
          android:layout_weight="1" >

          <Button
              android:id="@+id/history_bt_top"
              
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              
              android:layout_marginBottom="30dp"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"

              android:paddingBottom="5dp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="5dp"

              android:text="@string/history_bt_top" 
              android:textColor="@color/black"
              android:textSize="25dp" 
              
              />

          <Button
              android:id="@+id/history_bt_prev"
              
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              
              android:layout_marginBottom="30dp"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"

              android:paddingBottom="5dp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="5dp"

              android:text="@string/history_bt_prev" 
              android:textColor="@color/black"
              android:textSize="25dp" 
              
              />
          
          <Button
              android:id="@+id/history_bt_stop"
              
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              
              android:layout_marginBottom="30dp"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              
              android:background="@color/white"
              android:gravity="center"
              
              android:paddingBottom="5dp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="5dp"
              
              android:text="@string/history_bt_ret"
              android:textColor="@color/black"
              android:textSize="25dp" 
              
              />

          <Button
              android:id="@+id/history_bt_next"
              
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              
              android:layout_marginBottom="30dp"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"

              android:paddingBottom="5dp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="5dp"

              android:text="@string/history_bt_next" 
              android:textColor="@color/black"
              android:textSize="25dp" 
              
              />

          <Button
              android:id="@+id/history_bt_bottom"
              
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              
              android:layout_marginBottom="30dp"
              android:layout_marginTop="30dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"

              android:paddingBottom="5dp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:paddingTop="5dp"

              android:text="@string/history_bt_bottom" 
              android:textColor="@color/black"
              android:textSize="25dp" 
              
              />
          
      </LinearLayout>

  </LinearLayout>
